@@ -10,7 +10,7 @@
              '# used for work with Aplication Cache.'           + '\n'  +
              '# If you wont to see at work set appcache: true'  + '\n'  +
              '# in config.json and start cloudcmd.js'           + '\n'  +
-             '# http://github.com/coderaiser/cloudcmd'          + '\n');
+             '# http://coderaiser.github.com/cloudcmd'          + '\n');
     
     var main        = global.cloudcmd.main,
         fs          = main.fs,
