@@ -12,7 +12,7 @@
              '# parameters in config.json or environment'       + '\n'  +
              '# and start cloudcmd.js or just do'               + '\n'  +
              '# require(\'auth.js\').auth(pCode, pCallBack)'    + '\n'  +
-             '# http://github.com/coderaiser/cloudcmd'          + '\n');
+             '# http://coderaiser.github.com/cloudcmd'          + '\n');
              
     var main        = global.cloudcmd.main,
         
