@@ -10,7 +10,7 @@
              '# Module is part of Cloud Commander,'             + '\n'  +
              '# used for work update thru git.'                 + '\n'  +
              '# If you wont to see at work install git'         + '\n'  +
-             '# http://github.com/coderaiser/cloudcmd'          + '\n');
+             '# http://coderaiser.github.com/cloudcmd'          + '\n');
     
     var main            = global.cloudcmd.main,
         mainpackage     = main.mainpackage,
@@ -35,7 +35,7 @@
      * @param pStdout
      * @param pStderr
      */
-    function pull(pError, pStdout, pStderr){        
+    function pull(pError, pStdout, pStderr){
         var lExec;
         
         if(!pError){
